--- a/statefulset-mssql.yaml
+++ b/statefulset-mssql.yaml
@@ -64,7 +64,24 @@ spec:
               sleep 10;
               /opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P ${MSSQL_SA_PASSWORD} -C -Q "IF NOT EXISTS (SELECT * FROM sys.databases WHERE name = 'bidding') BEGIN CREATE DATABASE bidding; END"
               wait
-
+          readinessProbe:
+            exec:
+              command:
+                - /opt/mssql-tools18/bin/sqlcmd
+                - -S
+                - localhost
+                - -U
+                - SA
+                - -P
+                - "${MSSQL_SA_PASSWORD}"
+                - -C
+                - -Q
+                - "SELECT 1"
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            timeoutSeconds: 3
+            successThreshold: 1
+            failureThreshold: 5
   # volumeClaimTemplates:
   #   - metadata:
   #       name: mssql-persistent-storage
