--- a/statefulset-mssql.yaml
+++ b/statefulset-mssql.yaml
@@ -67,16 +67,11 @@ spec:
           readinessProbe:
             exec:
               command:
-                - /opt/mssql-tools18/bin/sqlcmd
-                - -S
-                - localhost
-                - -U
-                - SA
-                - -P
-                - "${MSSQL_SA_PASSWORD}"
-                - -C
-                - -Q
-                - "SELECT 1"
+                - sh
+                - -c
+                - |
+                  echo "Debugging: MSSQL_SA_PASSWORD=$MSSQL_SA_PASSWORD" &&
+                  /opt/mssql-tools18/bin/sqlcmd -S localhost -U SA -P "${MSSQL_SA_PASSWORD}" -C -Q "SELECT 1"
             initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 3
